--- a/reclamatec/pubspec.yaml
+++ b/reclamatec/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^0.6.2+1
+  firebase_core: ^1.6.0
   flutter:
     sdk: flutter
 
